# bang3

./: Cargo.toml  LICENSE  README.md  rustfmt.toml
.github/workflows/: benchmarks.yml  ci.yml
benches/: bench.rs  fib.rs
cli/: Cargo.toml
cli/src/: commands.rs  diagnostics.rs  main.rs
crates/cli/: Cargo.toml
crates/cli/src/: commands.rs  diagnostics.rs  main.rs
crates/cli/src/commands/: mod.rs  repl.rs
crates/cli/tests/: ui_test_lint.rs  ui_test_parse_errors.rs  ui_test_print.rs  ui_test_runtime_error.rs  ui_test_typecheck.rs
crates/formatter/: Cargo.toml
crates/formatter/src/: ast.rs  config.rs  formatter.rs  lib.rs  test.rs
crates/formatter/tests/: formatter_tests.rs
crates/gc/: Cargo.toml
crates/gc/src/: display.rs  lib.rs  pages.rs  test.rs
crates/interpreter/: Cargo.toml
crates/interpreter/scripts/: stdlib-docs.rs
crates/interpreter/src/: bytecode.rs  compiler.rs  context.rs  lib.rs  object.rs  stdlib.rs  test.rs  value.rs  vm.rs
crates/interpreter/src/stdlib/: assert.rs  iter.rs  list.rs  macros.rs  maths.rs  option.rs  string.rs
crates/interpreter/tests/: compiler_error_tests.rs  runtime_tests.rs  stdlib_tests.rs
crates/linter/: Cargo.toml
crates/linter/src/: helpers.rs  lib.rs  rules.rs  test.rs  variables.rs  visitor.rs
crates/linter/tests/: linter_tests.rs
crates/lsp/: Cargo.toml
crates/lsp/src/: documents.rs  lib.rs  locations.rs  notifications.rs  requests.rs
crates/lsp/src/requests/: completions.rs  diagnostics.rs  fixes.rs  folding.rs  format.rs  hover.rs  inlay_hints.rs  selection_range.rs  semantic_tokens.rs  symbols.rs  variables.rs
crates/parser/: Cargo.toml
crates/parser/src/: lib.rs  parser.rs  test.rs  tokeniser.rs
crates/parser/src/ast/: expression.rs  lines.rs  mod.rs  prettyprint.rs  span.rs  statement.rs
crates/stdlib/: Cargo.toml
crates/stdlib/scripts/: stdlib-docs.rs
crates/stdlib/src/: lib.rs  macros.rs  modules.rs
crates/stdlib/src/modules/: assert.rs  iter.rs  list.rs  maths.rs  option.rs  string.rs
crates/stdlib/tests/: stdlib_tests.rs
crates/syntax/: Cargo.toml
crates/syntax/src/: lib.rs  parser.rs  span.rs  test.rs  tokeniser.rs
crates/syntax/src/ast/: expression.rs  mod.rs  prettyprint.rs  statement.rs  types.rs
crates/typechecker/: Cargo.toml
crates/typechecker/src/: enviroment.rs  error.rs  exhaustive.rs  infer.rs  lib.rs  similarity.rs  stdlib.rs  test.rs  types.rs
crates/vscode/: language-configuration.json  package-lock.json  package.json
crates/vscode/src/: extension.ts
crates/vscode/syntaxes/: bang.tmLanguage.json
docs/: guide.md  stdlib_docs.md
examples/: fibonacci.bang  stdlib_docs.md  syntax.bang
lib/: Cargo.toml
lib/src/: lib.rs
lib/src/ast/: expression.rs  lines.rs  mod.rs  prettyprint.rs  span.rs  statement.rs  visitor.rs
lib/src/formatter/: ast.rs  config.rs  mod.rs  test.rs
lib/src/interpreter/: alloc.rs  bytecode.rs  compiler.rs  mod.rs  test.rs  value.rs  vm.rs
lib/src/linter/: helpers.rs  mod.rs  rules.rs  test.rs  variables.rs  visitor.rs
lib/src/lsp/: documents.rs  mod.rs  notifications.rs  requests.rs
lib/src/parser/: mod.rs  test.rs
lib/src/typechecker/: exhaustive.rs  mod.rs  test.rs
src/: allocator.rs  lib.rs  main.rs  parser.rs  tokeniser.rs
src/ast/: expression.rs  lines.rs  mod.rs  prettyprint.rs  span.rs  visitor.rs
src/formatter/: ast.rs  config.rs  mod.rs  test.rs
src/interpreter/: bytecode.rs  compiler.rs  mod.rs  test.rs  value.rs  vm.rs
src/linter/: helpers.rs  mod.rs  rules.rs  test.rs
src/parser/: mod.rs  test.rs  tokeniser.rs
src/typechecker/: test.rs
vscode/: biome.json  language-configuration.json  package.json  tsconfig.json
vscode/src/: extension.ts
vscode/syntaxes/: bang.tmLanguage.json
