[workspace]
members = [
  "crates/cli",
  "crates/formatter",
  "crates/interpreter",
  "crates/linter",
  "crates/lsp",
  "crates/parser",
  "crates/typechecker"
]
resolver = "2"

[workspace.lints]
rust.missing_docs = "warn"
clippy.pedantic = "warn"
clippy.wildcard_imports = { level = "allow", priority = 1 }


[profile.release]
codegen-units = 1
lto = "fat"
strip = true
panic = "abort"

[profile.bench]
debug = true
