[workspace]
resolver = "2"
members = [
  "crates/cli",
  "crates/gc",
  "crates/formatter",
  "crates/interpreter",
  "crates/linter",
  "crates/lsp",
  "crates/parser",
  "crates/syntax",
  "crates/typechecker",
]

[workspace.dependencies]
# formatter
bumpalo = { version = "3.16.0", features = ["boxed", "collections"] }

# interpreter
rustc-hash = "2.0.0"
smartstring = "1.0.1"

# cli
anstream = "0.6.15"
clap = { version = "4.5.20", features = ["derive"] }
owo-colors = "4.1.0"
rustyline = { version = "14.0.0", features = ["derive"] }

# lsp
lsp-server = "0.7.7"
lsp-types = "0.97.0"
serde_json = "1.0.128"

# syntax
thin-vec = "0.2.13"

# testing
indoc = "2.0.4"


[workspace.lints]
rust.missing_docs = "warn"
clippy.pedantic = "warn"
clippy.match_same_arms = { level = "allow", priority = 1 }
clippy.struct_excessive_bools = { level = "allow", priority = 1 }
clippy.wildcard_imports = { level = "allow", priority = 1 }

[profile.release]
codegen-units = 1
lto = "fat"
strip = true
panic = "abort"

[profile.bench]
debug = true
