[workspace]
resolver = "2"
members = [
  "crates/cli",
  "crates/gc",
  "crates/formatter",
  "crates/interpreter",
  "crates/linter",
  "crates/lsp",
  "crates/stdlib",
  "crates/syntax",
  "crates/typechecker",
]
default-members = ["crates/cli"]

[workspace.dependencies]
# formatter
bumpalo = { version = "3.19.0", features = ["boxed", "collections"] }

# interpreter
rustc-hash = "2.1.1"
smartstring = "1.0.1"

# cli
anstream = "0.6.20"
clap = { version = "4.5.47", features = ["derive"] }
owo-colors = "4.2.2"
rustyline = { version = "17.0.1", features = ["derive"] }

# lsp
lsp-server = "0.7.9"
lsp-types = "0.97.0"
serde_json = "1.0.143"

# syntax
thin-vec = "0.2.14"

# testing
indoc = "2.0.6"
assert_cmd = "2.0.17"


[workspace.lints]
rust.missing_docs = "warn"
clippy.pedantic = "warn"
clippy.match_same_arms = { level = "allow", priority = 1 }
clippy.struct_excessive_bools = { level = "allow", priority = 1 }
clippy.wildcard_imports = { level = "allow", priority = 1 }
clippy.print_stdout = { level = "warn", priority = 1 }

[profile.release]
codegen-units = 1
lto = "fat"
strip = true
panic = "abort"

[profile.bench]
debug = true
