[package]
name = "bang"
version = "3.0.0"
edition = "2021"

[dependencies]
bumpalo = { version = "3.14.0", features = ["boxed", "collections"] }
rustc-hash = "1.1.0"
smallvec = "1.13.1"
smartstring = "1.0.1"

lsp-server = "0.7.7"
lsp-types = "0.97.0"
serde_json = "1.0.128"

[dev-dependencies]
indoc = "2.0.4"

[lints]
workspace = true
