[package]
name = "bang"
version = "3.0.0"
edition = "2021"

[dependencies]
bang-formatter = { path = "../formatter" }
bang-interpreter = { path = "../interpreter" }
bang-linter = { path = "../linter" }
bang-lsp = { path = "../lsp" }
bang-parser = { path = "../parser" }
bang-typechecker = { path = "../typechecker" }

anstream = "0.6.4"
clap = { version = "4.4.8", features = ["derive"] }
owo-colors = "4.1.0"

[lints]
workspace = true
