[package]
name = "bang"
version = "3.0.0"
edition = "2024"

[dependencies]
bang-formatter = { path = "../formatter" }
bang-interpreter = { path = "../interpreter" }
bang-linter = { path = "../linter" }
bang-lsp = { path = "../lsp" }
bang-syntax = { path = "../syntax" }
bang-typechecker = { path = "../typechecker" }

anstream.workspace = true
clap.workspace = true
owo-colors.workspace = true
rustyline.workspace = true

[dev-dependencies]
assert_cmd.workspace = true
indoc.workspace = true

[lints]
workspace = true
