[package]
name = "bang-interpreter"
version = "3.0.0"
edition = "2024"

[dependencies]
bang-syntax = { path = "../syntax" }
bang-gc = { path = "../gc" }

rustc-hash.workspace = true
smartstring.workspace = true

[dev-dependencies]
indoc.workspace = true

# for checking stdlib documentation
bang-typechecker = { path = "../typechecker" }
bang-linter = { path = "../linter" }
bang-formatter = { path = "../formatter" }

[features]
gc-stress-test = []
debug-stack = []

[lints]
workspace = true

[[bin]]
name = "stdlib-docs"
path = "scripts/stdlib-docs.rs"
doc = false
