[package]
name = "bang-interpreter"
version = "3.0.0"
edition = "2024"

[dependencies]
bang-syntax = { path = "../syntax" }
bang-gc = { path = "../gc" }

rustc-hash.workspace = true
smartstring.workspace = true

[dev-dependencies]
indoc.workspace = true
bang-stdlib = { path = "../stdlib" }

[features]
gc-stress-test = []
debug-stack = []

[lints]
workspace = true
