[package]
name = "bang-lsp"
version = "3.0.0"
edition = "2021"

[dependencies]
bang-formatter = { path = "../formatter" }
bang-linter = { path = "../linter" }
bang-parser = { path = "../parser" }
bang-typechecker = { path = "../typechecker" }

lsp-server.workspace = true
lsp-types.workspace = true
serde_json.workspace = true

[lints]
workspace = true
