[package]
name = "bang-lsp"
version = "3.0.0"
edition = "2024"

[dependencies]
bang-formatter = { path = "../formatter" }
bang-linter = { path = "../linter" }
bang-syntax = { path = "../syntax" }
bang-typechecker = { path = "../typechecker" }
bang-interpreter = { path = "../interpreter" }

lsp-server.workspace = true
lsp-types.workspace = true
serde_json.workspace = true

[lints]
workspace = true
